force-app/main/default/objects/Training_Video_Mapping__mdt/Training_Video_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>YouTube Video URL Mapping with sObject and RecordType</description>
    <label>Training Video Mapping</label>
    <pluralLabel>Training Video Mappings</pluralLabel>
</CustomObject>