force-app/main/default/objects/Training_Video_Mapping__mdt/fields/Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Developer_Name__c</fullName>
    <description>The field is introspected by apex and provide the contextual training video for a record type</description>
    <inlineHelpText>Enter the Salesforce recordtype developer name</inlineHelpText>
    <label>Record Type Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>