force-app/main/default/objects/Training_Video_Mapping__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>Related sObject API Name, this is used by apex for training component to show the contextual training video.</description>
    <inlineHelpText>Enter the api name of the sObject</inlineHelpText>
    <label>SObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>