force-app/main/default/objects/Training_Video_Mapping__mdt/fields/Video_Title__c.field-meta.xml
<CustomField>
    <fullName>Video_Title__c</fullName>
    <description>The title appears on top of the training video.</description>
    <inlineHelpText>Enter the title that should appear on the top of the video in the component.</inlineHelpText>
    <label>Video Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>