force-app/main/default/objects/Training_Video_Mapping__mdt/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <description>The training video URL should be indicated here. For youtube refer https://support.google.com/youtube/answer/171780?hl=en for embedding a video</description>
    <inlineHelpText>Enter the URL of the training video. Make sure the embedded settings are enabled by the provider of the video</inlineHelpText>
    <label>Video URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>