force-app/main/default/objects/Training_Video_Mapping__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>SObject__c</columns>
    <columns>Video_Title__c</columns>
    <columns>Video_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
    <language>en_US</language>
</ListView>